--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=musicdiscovery
 spring.datasource.url=jdbc:postgresql://localhost:5432/musicdiscovery
 spring.datasource.username=postgres
-sprioing.datasource.password=passwd
+spring.datasource.password=passwd
