Fix README.md and add properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.application.name=musicdiscovery
-spring.datasource.url=jdbc:postgresql://localhost:5432/musicdiscovery
-spring.datasource.username=postgres
-spring.datasource.password=passwd
+spring.application.name=music-discovery-app
