--- a/server/src/main/resources/application-local.properties
+++ b/server/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
 # For only local file
-spring.datasource.url=jdbc.postgresql://127.0.0.1:5432/music_discovery
+spring.datasource.url=jdbc.postgresql://localhost:5432/music_discovery
 spring.datasource.username=quillshwammy
 spring.datasource.password=passwd
