--- a/server/src/main/resources/application-local.properties
+++ b/server/src/main/resources/application-local.properties
@@ -1,4 +1,5 @@
 # For only local file
+spring.database.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc.postgresql://localhost:5432/music_discovery
 spring.datasource.username=quillshwammy
 spring.datasource.password=passwd
