Add GET and POST methods to router

--- a/server/src/main/resources/application-local.properties
+++ b/server/src/main/resources/application-local.properties
@@ -1,5 +1,8 @@
 # For only local file
-spring.database.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc.postgresql://localhost:5432/music_discovery
+logger.level.org.springframework=DEBUG
+spring.datasource.url=jdbc:postgresql://localhost:5433/music_discovery
 spring.datasource.username=quillshwammy
-spring.datasource.password=passwd
+spring.datasource.password=0164
+
+# Connection
+#psql -h localhost -p 5433 -U quillshwammy -d music_discovery
